SERVER-4795 mongostat sleep for correct amount of time when multiple hosts specified